--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "devDependencies": {
     "after": "0.8.1",
     "body-parser": "~1.13.3",
+    "chai": "^3.4.1",
     "connect-redis": "~2.4.1",
     "cookie-parser": "~1.3.5",
     "cookie-session": "~1.2.0",
